@@ -193,6 +193,12 @@ task runProviderPactVerification(type: Test) {
   systemProperty 'pact.provider.version', project.pacticipantVersion
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 runProviderPactVerification.dependsOn contract
 
 runProviderPactVerification.finalizedBy pactVerify
@@ -378,7 +384,7 @@ dependencies {
   implementation "org.springframework.security:spring-security-config"
   implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
   implementation 'uk.gov.hmcts.reform:idam-client:v1.5.4'
-  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '8.19'
+  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.15.2'
   implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
   implementation 'commons-io:commons-io:2.8.0'
   //CVE-2021-35515, CVE-2021-35516, CVE-2021-35517, CVE-2021-36090:
@@ -427,6 +433,7 @@ dependencies {
   testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
   testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
   testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
   smokeTestCompile group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   smokeTestCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
